openshift/gitops/manifests/rfe/httpd/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"httpd-ostree:latest","namespace":"rfe"},"fieldPath":"spec.template.spec.containers[?(@.name==\"httpd\")].image"}]'
  labels:
    app: httpd
    app.kubernetes.io/component: httpd
    app.kubernetes.io/instance: httpd
  name: httpd
  namespace: httpd
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: httpd
  strategy: {}
  template:
    metadata:
      labels:
        deployment: httpd
    spec:
      containers:
        - image: " "
          name: httpd
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          volumeMounts:
            - mountPath: /var/www/html
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: httpd
